--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "main": "server.js",
     "dependencies": {
         "express": "^4.15.2",
-        "body-parser": "^1.17.1"
+        "body-parser": "^1.17.1",
+        "nodemailer": "^4.0.1",
+        "@google/maps": "^0.3.1"
     },
     "license": "MIT"
 }
