--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "express": "^4.15.2",
         "body-parser": "^1.17.1",
         "nodemailer": "^4.0.1",
-        "@google/maps": "^0.3.1"
+        "@google/maps": "^0.3.1",
+        "geoip-lite": "^1.2.1"
     },
     "license": "MIT"
 }
