--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "body-parser": "^1.17.1",
         "nodemailer": "^4.0.1",
         "@google/maps": "^0.3.1",
-        "geoip-lite": "^1.2.1"
+        "request": "^2.81.0"
     },
     "license": "MIT"
 }
